add the find method for BLE and distinguish between BLE and normal Bluetooth, the xml is the same as normal bluetooth

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,11 @@
             android:enabled="true"
             android:exported="true" >
         </service>
+
+        <activity
+            android:name=".BLEFinderActivity"
+            android:label="@string/title_activity_lefinder" >
+        </activity>
     </application>
 
 </manifest>
