Add a temporary activity to handle the BLE GattServices. Set the minSdkVersion = 18 to make sure BLE is available

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
             android:name=".BLEFinderActivity"
             android:label="@string/title_activity_lefinder" >
         </activity>
+        <activity
+            android:name=".BLECtrlActivity"
+            android:label="@string/title_activity_blectrl" >
+        </activity>
     </application>
 
 </manifest>
