--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,10 @@
             android:name=".BLECtrlActivity"
             android:label="@string/title_activity_blectrl" >
         </activity>
+        <activity
+            android:name=".gitTestActivity"
+            android:label="@string/title_activity_git_test" >
+        </activity>
     </application>
 
 </manifest>
